force-app/main/default/objects/Yacht_Reservation__c/fields/Individual_Yacht__c.field-meta.xml
<CustomField>
    <fullName>Individual_Yacht__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Individual Yacht</label>
    <referenceTo>Individual_Yacht__c</referenceTo>
    <relationshipLabel>Yacht Reservations</relationshipLabel>
    <relationshipName>Yacht_Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>