force-app/main/default/objects/Yacht_Reservation__c/fields/Reservation_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Reservation_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reservation External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>