force-app/main/default/objects/Yacht_Reservation__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique key used for handling duplicate reservations 
Yacht Id_reservationDate</description>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>