force-app/main/default/objects/Yacht_Reservation__c/fields/Yacht_Type__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Type__c</fullName>
    <formula>Individual_Yacht__r.Yacht_Type__r.Name</formula>
    <label>Yacht Type</label>
    <type>Text</type>
</CustomField>