force-app/main/default/objects/Yacht_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Individual_Yacht__c</columns>
    <columns>Final_Price__c</columns>
    <columns>Party_Size__c</columns>
    <columns>Reservation_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Guest_Email__c</columns>
    <columns>Guest_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>